define baseline defaults for packages and timezone

--- a/roles/server-baseline/tasks/main.yml
+++ b/roles/server-baseline/tasks/main.yml
@@ -5,9 +5,9 @@
 
 - name: Install base packages
   apt:
-    name:
-      - curl
-      - vim
-      - git
-      - htop
+    name: "{{ base_packages }}"
     state: present
+
+- name: Set timezone
+  timezone:
+    name: "{{ timezone }}"
