added a task to callout/notify the handler when we need to restart the SSH service to prevent root access to server

--- a/roles/server-baseline/tasks/main.yml
+++ b/roles/server-baseline/tasks/main.yml
@@ -16,3 +16,10 @@
   command: which {{ item }}
   loop: "{{ base_packages }}"
   changed_when: false
+
+- name: Update SSH config
+  lineinfile:
+    path: /etc/ssh/sshd_config
+    regexp: '^#?PermitRootLogin'
+    line: 'PermitRootLogin no'
+  notify: restart ssh
